@@ -6,6 +6,7 @@
 * Missing signpost image attribute
 * Added check to prefix removing the root of the tree
 * Added unique identifier generation when adding child
+* Added copy to clipboard in XML format (only the tree_meta attribute is required)
 
 - Version 0.3.1:
 * Fixed bug that prevented adding/editing a new pipe in a level
